2005-09-08 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b1

	Fix: Issues with setup/functions.inc which not longer exists.

2005-08-29  Chris Kelly <ckdake@users.sf.net> 1.5.1-RC3

	* Release: 1.5.1-RC3

2005-08-29 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b15

	* Fix: Poll Properties were not set recursively.

2005-08-29 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b14
	
	* Merged b12 and b13, language syncronisation for RC3.

2005-08-24 Jay Rossiter <cryptographite@users.sf.net> 1.5.1-RC3-cvs-b13

	* Fix: Prevent file exposure bug in stats module (thanks to ilia)

2005-08-23 Jay Rossiter <cryptographite@users.sf.net> 1.5.1-RC3-cvs-b12

	* Fix: Prevent HTML tags inside EXIF info from being displayed without
	  escaping.

2005-08-19 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b11

	* Fix: Make it possible to have Gallery as startpage in Postnuke or phpNuke.

	* Change: Url to w3c html validator.

2005-08-17 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b10

	* Fix: When using do_command.php e.g.for creating new album and Gallery is embedded,
	       "Attempted security breach." occured due to new full url schema added in 
	       1.5.1-RC2-cvs-b14 + 1.5.1-RC3-cvs-b3

	* Fix: After creating a new album, with debug and email on, 
	       an Error occured and dismiss button didnt work.

2005-08-16 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b9

	* Fix: Moved and adapted setup/functions.inc to lib/setup.php.
	       Some functions in this file are also used outside setup, 
	       so when user protect the setup folder some functions where unavailable.

	* New: Added functions fs_is_writable

	* Fix: .htacces is optional, use function above to check to prevent error message.	

2005-08-16 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b8

	* Fix: Wording. 'strg' is german ;) 'ctrl' is more international.

	* Change: Some indenting.

	* "Fix": Change some <td nowrap> and put it into css class.
		 Affected are class "head" and "title".
