@@ -1,6 +1,11 @@
+2005-09-08 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b2
+
+	* "Fix": As we use now (1.5.1-RC3-cvs-b12) verbose output for exifdata, 
+	   we now show only fields WITH data.
+
 2005-09-08 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b1
 
-	Fix: Issues with setup/functions.inc which not longer exists.
+	* Fix: Issues with setup/functions.inc which not longer exists.
 
 2005-08-29  Chris Kelly <ckdake@users.sf.net> 1.5.1-RC3
 
